--- a/server/src/core/infrastructure/mail/templates/welcome/html.hbs
+++ b/server/src/core/infrastructure/mail/templates/welcome/html.hbs
@@ -55,7 +55,7 @@
         <h1>Welcome to {{companyName}}</h1>
     </div>
     <div class="content">
-        <p>Hello <span class="username">{{username}}</span>,</p>
+        <p>Hello <span class="username">{{firstName}}</span>,</p>
         <p>We're excited to have you join our community. Thank you for signing up!</p>
         <p>If you have any questions, please feel free to reach out to our support team.</p>
         <p>Best regards,</p>
