Added locked account listener

--- a/server/src/core/infrastructure/mail/templates/deactivate-account/html.hbs
+++ b/server/src/core/infrastructure/mail/templates/deactivate-account/html.hbs
@@ -69,16 +69,16 @@
         <h1>Account Deactivation</h1>
     </div>
     <div class="content">
-        <p>Hello <span class="username">{{username}}</span>,</p>
-        <p>We are writing to confirm that your account with <span class="company-name">{{companyName}}</span> has been successfully deactivated.</p>
+        <p>Hello <span class="username">{{firstName}}</span>,</p>
+        <p>We are writing to confirm that your account with <span class="company-name">{{company}}</span> has been successfully deactivated.</p>
         <div class="callout-box">
             <p>If you believe this was done in error or if you did not initiate this request, please contact our support team immediately.</p>
         </div>
         <p>Thank you for using our service.</p>
-        <p>Sincerely,<br>The <span class="company-name">{{companyName}}</span> Team</p>
+        <p>Sincerely,<br>The <span class="company-name">{{company}}</span> Team</p>
     </div>
     <div class="footer">
-        <p>&copy; {{year}} <span class="company-name">{{companyName}}</span>. All rights reserved.</p>
+        <p>&copy; {{year}} <span class="company-name">{{company}}</span>. All rights reserved.</p>
     </div>
 </div>
 </body>
