--- a/server/src/core/infrastructure/mail/templates/deactivate-account/text.hbs
+++ b/server/src/core/infrastructure/mail/templates/deactivate-account/text.hbs
@@ -1,6 +1,6 @@
-Hey, {{username}}!
+Hey, {{firstName}}!
 
-You have successfully deactivated account!
+You have successfully deactivated your account!
 
 We're sorry to see you go.
 
