--- a/server/src/core/infrastructure/mail/templates/forgot-password/text.hbs
+++ b/server/src/core/infrastructure/mail/templates/forgot-password/text.hbs
@@ -1,5 +1,5 @@
-Hey, {{username}}! 
+Hey, {{firstName}}! 
 
-new password was successfully changed and sent to {{email}}
+Your new password was successfully changed and sent to {{email}}
 
 :)
