--- a/server/src/core/infrastructure/mail/templates/reset-password/html.hbs
+++ b/server/src/core/infrastructure/mail/templates/reset-password/html.hbs
@@ -62,16 +62,16 @@
 <div class="container">
     <div class="header">
         <!-- You can use a Handlebars variable here for a logo path if needed -->
-         <img src="{{logoUrl}}" alt="Your Company Logo">
+         <img src="{{logoUrl}}" alt="{{company}} Logo">
     </div>
     <div class="content">
         <h1>Password Reset Successful</h1>
-        <p>Hello {{username}},</p>
+        <p>Hello {{firstName}},</p>
         <p>Your password for your account has been successfully updated. You can now log in with your new password.</p>
 
     </div>
     <div class="footer">
-        <p>&copy; {{year}} {{companyName}}. All rights reserved.</p>
+        <p>&copy; {{year}} {{company}}. All rights reserved.</p>
     </div>
 </div>
 </body>
