--- a/server/src/core/infrastructure/mail/templates/verify-account/text.hbs
+++ b/server/src/core/infrastructure/mail/templates/verify-account/text.hbs
@@ -1,6 +1,6 @@
 Hello {{username}},
 
-Thank you for signing up for {{companyName}}! 
+Thank you for signing up for {{company}}! 
 
 To get started, please verify your email address by copying and pasting the link below into your browser:
 
@@ -8,7 +8,7 @@ To get started, please verify your email address by copying and pasting the link
 
 This link will expire in 24 hours for your security. 
 
-If you did not create an account with {{companyName}}, you can safely ignore this email.
+If you did not create an account with {{company}}, you can safely ignore this email.
 
 Best regards,
-The {{companyName}} Team
+The {{company}} Team
