Implemented forgot passord

--- a/server/src/core/infrastructure/mail/templates/forgot-password/html.hbs
+++ b/server/src/core/infrastructure/mail/templates/forgot-password/html.hbs
@@ -37,7 +37,7 @@
           <table role="presentation" style="width:94%;max-width:600px;border:none;border-spacing:0;text-align:left;font-family:Arial,sans-serif;font-size:16px;line-height:22px;color:#363636;background-color:#FFFFFF;">
             <tr>
               <td style="padding:20px;text-align:center;font-size:24px;font-weight:bold;">
-                <a href="{{Company}}" style="text-decoration:none;">
+                <a href="{{company}}" style="text-decoration:none;">
                   <img src="{{logoUrl}}" width="160" alt="{{company}} Logo" style="width:160px;max-width:80%;height:auto;border:none;text-decoration:none;color:#ffffff;">
                 </a>
               </td>
