Added greetings event listener interface

--- a/server/src/core/infrastructure/mail/templates/greetings/anniversary/html.hbs
+++ b/server/src/core/infrastructure/mail/templates/greetings/anniversary/html.hbs
@@ -20,7 +20,7 @@
       <p>Today marks your <strong>{{yearsCount}} year</strong> anniversary with {{company}}.</p>
       <p>Your trust and dedication have been invaluable. We are honored to have you on our platform!</p>
       <br>
-      <a href="{{companyUrl}}" class="btn">View Our Milestones</a>
+      <a href="{{logoUrl}}" class="btn">View Our Milestones</a>
     </div>
     <div class="footer">© {{year}} {{company}}</div>
   </div>
